--- a/axelor-production/src/main/resources/views/Product.xml
+++ b/axelor-production/src/main/resources/views/Product.xml
@@ -13,7 +13,8 @@
       <field name="economicManufOrderQty"/>
       <field name="defaultBillOfMaterial" canEdit="false"
         onSelect="action-product-attrs-bill-of-material-domain" form-view="bill-of-material-form"
-        grid-view="bill-of-material-grid"/>
+        grid-view="bill-of-material-grid"
+        if="!__config__.app.getApp('base')?.companySpecificProductFieldsSet?.find({it.name == 'defaultBillOfMaterial'})"/>
       <field name="lastProductionPrice" readonly="true"/>
       <field name="realOrEstimatedPriceSelect"
         onChange="action-product-group-cost-type-select-onchange"/>
