Compute long execution in new thread to avoid blocking the interface (#6024)
* Compute MRP in new thread to avoid blocking

The MRP is now executing in a new thread, and returns a notification to
the interface if it is taking too much time to finish.
This fixes "internal server error" created by timeout.

* Add timeout configuration for processes in AppBase

* Compute Batches in new thread to avoid blocking the user
RM23741

--- a/axelor-base/src/main/resources/views/BaseBatch.xml
+++ b/axelor-base/src/main/resources/views/BaseBatch.xml
@@ -40,8 +40,7 @@
     </panel-tabs>
     <panel name="synchronizeBtnPanel" sidebar="true">
       <button name="synchronizeBtn" showIf="actionSelect == 2"
-        title="Batch calendar synchronization"
-        onClick="save,action-base-batch-method-synchronize-calendars"/>
+        title="Batch calendar synchronization" onClick="save,action-base-batch-method-run-batch"/>
     </panel>
   </form>
 
@@ -72,9 +71,8 @@
     <call class="com.axelor.apps.base.web.BaseBatchController" method="actionTarget"/>
   </action-method>
 
-  <action-method name="action-base-batch-method-synchronize-calendars">
-    <call class="com.axelor.apps.base.web.BaseBatchController"
-      method="actionSynchronizeCalendars"/>
+  <action-method name="action-base-batch-method-run-batch">
+    <call class="com.axelor.apps.base.web.BaseBatchController" method="runBatch"/>
   </action-method>
 
   <!-- ACTION ATTRS -->
