--- a/axelor-crm/src/main/resources/views/CrmBatch.xml
+++ b/axelor-crm/src/main/resources/views/CrmBatch.xml
@@ -24,13 +24,13 @@
     <panel-tabs name="mainPanelTab">
       <panel name="eventReminderPanel" title="Event reminder page">
         <button name="eventReminderBatchBtn" title="Event reminder batch"
-          onClick="save,action-crm-batch-method-action-event-reminder"/>
+          onClick="save,action-crm-batch-method-run-batch"/>
       </panel>
       <panel name="targetPanel" title="Target page">
         <field name="targetConfigurationSet" colSpan="12"
           form-view="target-configuration-form" grid-view="target-configuration-grid"/>
         <button name="targetBatchBtn" title="Target batch" colSpan="4"
-          onClick="save,action-crm-batch-method-action-target"/>
+          onClick="save,action-crm-batch-method-run-batch"/>
       </panel>
       <panel name="informationPanel" title="Information">
         <field name="createdOn" title="Created on"/>
@@ -65,13 +65,8 @@
   </action-record>
 
   <!-- ACTION METHOD -->
-  <action-method name="action-crm-batch-method-action-event-reminder">
-    <call class="com.axelor.apps.crm.web.CrmBatchController" method="actionEventReminder"/>
-  </action-method>
-
-  <!-- ACTION METHOD -->
-  <action-method name="action-crm-batch-method-action-target">
-    <call class="com.axelor.apps.crm.web.CrmBatchController" method="actionTarget"/>
+  <action-method name="action-crm-batch-method-run-batch">
+    <call class="com.axelor.apps.crm.web.CrmBatchController" method="runBatch"/>
   </action-method>
 
   <!-- ACTION ATTRS -->
@@ -85,5 +80,4 @@
     <field name="company" hidden="true"
       if="!__config__.app.getApp('base').getEnableMultiCompany()"/>
   </search-filters>
-
 </object-views>
