--- a/axelor-supplychain/src/main/resources/views/SupplychainBatch.xml
+++ b/axelor-supplychain/src/main/resources/views/SupplychainBatch.xml
@@ -93,24 +93,22 @@
         showIf="actionSelect == 1" onClick="save,action-supplychain-batch-group-accounting-cut-off"
         colSpan="12"/>
       <button name="invoiceOutgoingStockMoveBatchBtn" title="Invoice outgoing stock moves"
-        showIf="actionSelect == 2"
-        onClick="save,action-supplychain-batch-method-invoice-outgoing-stock-moves" colSpan="12"
-        if="__config__.app.getApp('supplychain').getGenerateInvoiceFromStockMove()"/>
+        showIf="actionSelect == 2" onClick="save,action-supplychain-batch-method-run-batch"
+        colSpan="12" if="__config__.app.getApp('supplychain').getGenerateInvoiceFromStockMove()"/>
       <button name="invoiceOrdersBatchBtn" title="Invoice orders" showIf="actionSelect == 3"
-        onClick="save,action-supplychain-batch-method-invoice-orders" colSpan="12"/>
+        onClick="save,action-supplychain-batch-method-run-batch" colSpan="12"/>
     </panel>
   </form>
 
   <!-- ACTION GROUP -->
   <action-group name="action-supplychain-batch-group-accounting-cut-off">
     <action name="action-supplychain-batch-validate-twice-in-a-month"/>
-    <action name="action-supplychain-batch-method-accounting-cut-off"/>
+    <action name="action-supplychain-batch-method-run-batch"/>
   </action-group>
 
   <action-group name="action-group-supplychain-batch-group-onload">
     <action name="action-supplychain-batch-attrs-show-label"/>
   </action-group>
-
 
   <!-- ACTION ATTRS -->
   <action-attrs name="action-supplychain-batch-attrs-show-label">
@@ -144,19 +142,8 @@
 
   <!-- ACTION METHOD -->
 
-  <action-method name="action-supplychain-batch-method-invoice-outgoing-stock-moves">
-    <call class="com.axelor.apps.supplychain.web.SupplychainBatchController"
-      method="invoiceOutgoingStockMoves"/>
-  </action-method>
-
-  <action-method name="action-supplychain-batch-method-invoice-orders">
-    <call class="com.axelor.apps.supplychain.web.SupplychainBatchController"
-      method="invoiceOrders"/>
-  </action-method>
-
-  <action-method name="action-supplychain-batch-method-accounting-cut-off">
-    <call class="com.axelor.apps.supplychain.web.SupplychainBatchController"
-      method="accountingCutOff"/>
+  <action-method name="action-supplychain-batch-method-run-batch">
+    <call class="com.axelor.apps.supplychain.web.SupplychainBatchController" method="runBatch"/>
   </action-method>
 
 
